# plasma-desktop-run-command

./: CMakeLists.txt  README.md  config.ui  plasma-containmentactions-runcommand.desktop  runcommand.cpp  runcommand.hpp
src/: plasma-containmentactions-runcommand.desktop
